# VibeSafe

./: .gitignore  Dockerfile  Dockerfile.api  RAILWAY.md  README.md  action.yml  cli.py  orchestrator.py  package.json  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/workflows/: railway-api.yml  vibesafe.yml
agent/: __init__.py  context.py  llm.py  loop.py  tools.py
config/: __init__.py  frameworks.yaml  patterns.yaml  rules.yaml
config/prompts/: ai_security.txt  auth_analysis.txt  data_flow.txt  injection_analysis.txt  scalability.txt  system.txt
landing/: .env.example  README.md  index.html  package-lock.json  package.json
landing/src/: App.tsx  index.css
landing/src/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LoadingScreen.tsx  Navbar.tsx  Pricing.tsx  Stats.tsx  TerminalPreview.tsx
landing/src/hooks/: useHlsVideo.ts  useScrollSpy.ts
landing/src/lib/: api.ts  constants.ts  scanLogs.ts
landing/src/types/: scan.ts
models/: __init__.py  context.py  finding.py  fix.py
report/: formatter.py  generator.py
report/templates/: report.md.jinja
saas/: __init__.py  app.py  auth.py  billing.py  config.py  database.py  demo.py  scans.py  usage.py  web.py
scanner/: __init__.py  discovery.py  tier1.py  tier2.py  tier3.py
tests/: __init__.py  test_demo.py  test_discovery.py  test_github.py  test_integration.py  test_orchestrator.py  test_python_integration.py  test_report.py  test_saas.py  test_tier1.py  test_tier2.py  test_tier3.py
utils/: __init__.py  archive.py  files.py  git.py  github.py  logger.py  tokens.py
(+25 files in other folders)
